--- a/style/count.css
+++ b/style/count.css
@@ -1,4 +1,3 @@
-
 .count {
 
     width: 350px;
@@ -16,24 +15,28 @@
     gap: 12px;
     padding: 30px;
 
-    
+
 }
-.count label{
+
+.count label {
 
     width: 80%;
     font-size: bold;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 }
-.count input{
+
+.count input {
 
     padding: 10px;
-    border: 2px solid green;
-    background-color: #d4edda;
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
     border-radius: 7px;
 
 }
-.count button{
+
+.count button {
     transform: translateY(20px);
     padding: 15px;
     background-color: #181818;
@@ -42,103 +45,114 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#back{
-
-    padding: 30px;
+#back {
+    padding: 20px;
+    width: 300px;
+    height: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translateX(650px);
-        
+    cursor: pointer;
+    gap: 60px;
+    transform: translateX(555px);
+    margin-top: 40px;
+    border: 1px solid #dcdcdc;
+    outline: none;
+    background-color: #007bff;
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-radius: 7px;
+    color: white;
 }
 
-
 header {
-position: fixed;
-top: 0;
-left: 50%;
-width: 98%;
-height: 60px;
-background-color: rgba(246, 246, 246, 0.5);
-color: #fff;
-box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
-text-align: center;
-padding: 15px;
-z-index: 1000;
-display: flex;
-justify-content: space-between;
-align-items: center;
-border-radius: 2px 2px 7px 7px;
-transform: translateX(-50%);
-transition: transform 0.6s ease, background-color 0.6s ease, box-shadow 0.6s ease;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    width: 98%;
+    height: 60px;
+    background-color: rgba(246, 246, 246, 0.5);
+    color: #fff;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    padding: 15px;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 2px 2px 7px 7px;
+    transform: translateX(-50%);
+    transition: transform 0.6s ease, background-color 0.6s ease, box-shadow 0.6s ease;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #logo {
-max-height: 90px;
-margin-left: 10px;
+    max-height: 90px;
+    margin-left: 10px;
 }
 
 header:hover {
 
-transform: translateX(-50%) scale(1.02);
-background-color: rgba(249, 249, 249, 0.9);
-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+    transform: translateX(-50%) scale(1.02);
+    background-color: rgba(249, 249, 249, 0.9);
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
 
 }
 
 .text-container {
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 50px;
-flex-grow: 1;
-transform: translateX(-60px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    flex-grow: 1;
+    transform: translateX(-60px);
 }
 
 .text-container p {
-margin: 0;
-color: #333;
-font-size: 16px;
-font-weight: bold;
-cursor: pointer;
-}
-.localizacao{
-
-transform: translateX(-50px);
-margin-top: 5px;
-gap: 10px;
-
+    margin: 0;
+    color: #333;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
-.search{
-display: flex;
-transform: translateX(-80px);
-height: 25px;
-}
+.localizacao {
 
-.search img{
-
-cursor: pointer;
+    transform: translateX(-50px);
+    margin-top: 5px;
+    gap: 10px;
 
 }
+
+.search {
+    display: flex;
+    transform: translateX(-80px);
+    height: 25px;
+}
+
+.search img {
+
+    cursor: pointer;
+
+}
+
 .search input {
-height: 30px;
-width: 260px;
-padding: 2px;
-gap: 10px;
-transform: translateX(-300px);
-display: none; 
-border-radius: 7px;
-border: 1px solid #333;
-position: absolute;
-top: -4px;
-left: 0;
-z-index: 10;
+    height: 30px;
+    width: 260px;
+    padding: 2px;
+    gap: 10px;
+    transform: translateX(-300px);
+    display: none;
+    border-radius: 7px;
+    border: 1px solid #333;
+    position: absolute;
+    top: -4px;
+    left: 0;
+    z-index: 10;
 }
 
-.cart{
-display: flex;
-transform: translateX(-20px);
-height: 29px;
+.cart {
+    display: flex;
+    transform: translateX(-20px);
+    height: 29px;
 }
