--- a/style/index.css
+++ b/style/index.css
@@ -114,9 +114,9 @@ img{
     margin-top: 5px;
 }
 input:required:invalid {
-    border: 2px solid red;
-    background-color: #f8d7da;
-    box-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
 input:required:valid {
