--- a/style/infoConfig.css
+++ b/style/infoConfig.css
@@ -11,11 +11,14 @@
 
         padding: 10px;
         width: 200px;
-        border: none;
+        outline: none;
         border-radius: 7px;
-        background-color: #181818;
-        color: white;
+        background-color: #ffffff;
+        color: rgb(0, 0, 0);
         font-family: Georgia, 'Times New Roman', Times, serif;
+        border-color: #007bff;
+        box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+
 
     }
 
