--- a/style/style.css
+++ b/style/style.css
@@ -143,44 +143,38 @@ footer:hover {
 
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 30px;
-    margin: 0 auto;
-    max-width: 1200px;
-    padding-top: 60px;
-}
-
-#grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-    padding: 20px;
-}
-
-.card {
-    background: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.card img {
-    width: 100%;
-    height: auto;
+.card-body{
+    width: 17vw;
+    height: 55vh;
+    padding-left: 15px;
+    overflow: hidden;
+    display: flexbox;
+    border: none;
     border-radius: 4px;
-}
+    border: 1px solid #999999;
+    max-width: 17vw;
+    box-shadow: 2px 2px  2px 1px #999999;
+    
 
+}
+.card-body:hover{
+    
+        background-color: #f0f0f0;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        transform: translateY(-5px);
+      
+    
+}
 .card-title {
-    font-size: 18px;
-    margin: 10px 0;
-}
-
-.card-preco {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
-    color: #007bff;
-}
+    margin-bottom: 10px;
+    color: #333;
+  }
+
+  .card-text {
+    font-size: 16px;
+    color: #666;
+    margin-bottom: 15px;
+  }
+
